우선layout에카테고리,sort다넣어둠

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,9 +2,7 @@
 
 <!DOCTYPE html>
 <html lang="ko" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layouts/layout}">
-<th:block layout:fragment="script">
-  <script th:src="@{js/sort_script.js}"></script>
-</th:block>
+<th:block layout:fragment="script"></th:block>
 
 <th:block layout:fragment="css"></th:block>
 
