--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -9,6 +9,9 @@
     <script src="/js/jquery-3.7.1.min.js"></script>
     <script th:src="@{/js/main_script.js}"></script>
     <script th:src="@{/js/wish_script.js}"></script>
+    <script th:src="@{js/category_filter.js}"></script>
+    <script th:src="@{js/sort_script.js}"></script>
+
     <link rel="stylesheet" th:href="@{/css/main_style.css}" />
 
     <th:block layout:fragment="script"></th:block>
