--- a/src/main/resources/templates/preference.html
+++ b/src/main/resources/templates/preference.html
@@ -60,7 +60,7 @@
                 <input type="checkbox" id="soft" name="soft" value="Y"
                     th:checked="${session.survey != null and session.survey.soft == 'Y'}" />
 
-                <label for="flat" class="preference-button">플랫한</label>
+                <label for="flat" class="preference-button">딱딱한</label>
                 <input type="checkbox" id="flat" name="flat" value="Y"
                     th:checked="${session.survey != null and session.survey.flat == 'Y'}" />
 
