제품카드에서 키워드 선택, 검색 페이지 따로 분리

--- a/src/main/resources/templates/filterCategory.html
+++ b/src/main/resources/templates/filterCategory.html
@@ -57,7 +57,7 @@
               class="preference-button2"
               th:classappend="${session.filteredProducts?.ctComf == 'Y'} ? 'selected' : ''"
             >
-              <img src="/images/category-icons/comfortable.jpg" alt=" " />
+              <img src="/images/category-icons/comfortable.png" alt=" " />
               <span>편한</span>
             </label>
             <input
