--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,11 +11,6 @@
 
 <th:block layout:fragment="content">
 
-
-
-
-
-
   <!-- 여기 로그인이에요! -->
   <div id="login" class="page">
     <div class="section-title">LOGIN</div>
@@ -43,7 +38,7 @@
       <div class="login-links">
         <a href="goJoin">회원가입</a> |
         <a href="goFindAccount">계정 찾기</a> |
-        <a href="#">문의하기</a>
+        <a href="goInquiry">문의하기</a>
       </div>
 
       <!-- 로그인 버튼 -->
