--- a/src/main/resources/templates/searchProduct.html
+++ b/src/main/resources/templates/searchProduct.html
@@ -10,12 +10,14 @@
 <!-- 콘텐츠 -->
 <div layout:fragment="content">
 
+  <div class="air"></div>
   <!-- 점수 높은 순서(무엇사 추천순), 정렬 버튼 가격 높은 낮은순서 -->
-  <select id="sortBy">
-    <option value="recommend_desc">무엇사 추천순</option>
-    <option value="price_asc">낮은 가격순</option>
-    <option value="price_desc">높은 가격순</option>
-  </select>
+  <div class="div-from-sortBy"><select id="sortBy">
+      <option value="recommend_desc">무엇사 추천순</option>
+      <option value="price_asc">낮은 가격순</option>
+      <option value="price_desc">높은 가격순</option>
+    </select>
+  </div>
 
   <th:block th:replace="~{fragments/productList :: productList}"></th:block>
 
