--- a/src/main/resources/templates/inquiry.html
+++ b/src/main/resources/templates/inquiry.html
@@ -48,7 +48,7 @@
 
 <th:block layout:fragment="content">
 
-    <h1>문의 게시판</h1>
+    <h1>문의 하기</h1>
 
     <table>
         <thead>
@@ -56,18 +56,27 @@
                 <th>제목</th>
                 <th>작성자</th>
                 <th>작성일</th>
-                <th colspan="2">내용</th>
+                <th>내용</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td>서비스 관련 문의</td>
-                <td>김민수</td>
-                <td>2025-04-23</td>
-                <td>서비스 사용 중 문제가 발생했습니다. 확인 부탁드립니다.</td>
-                <td><button>삭제</button></td>
+                <form action="/inquiryWrite" method="post">
+                    <td>
+                        <input type="text" name="title" placeholder="제목 입력" required>
+                    </td>
+                    <td>
+                        <input type="text" name="writer" placeholder="작성자 입력" required>
+                    </td>
+                    <br>
+                    <td>
+                        <input type="text" name="content" placeholder="내용 입력" style="width: 100%;" required>
+                    </td>
+                    <td>
+                        <button type="submit">작성</button>
+                    </td>
+                </form>
             </tr>
-            <!-- 추가 문의가 여기에 표시됩니다 -->
         </tbody>
     </table>
 
