--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -37,8 +37,7 @@
       <!-- 하단 링크 -->
       <div class="login-links">
         <a href="goJoin">회원가입</a> |
-        <a href="goFindAccount">계정 찾기</a> |
-        <a href="goInquiry">문의하기</a>
+        <a href="goFindAccount">계정 찾기</a>
       </div>
 
       <!-- 로그인 버튼 -->
