--- a/src/main/resources/static/css/main_style.css
+++ b/src/main/resources/static/css/main_style.css
@@ -66,63 +66,63 @@ http://scripts.sil.org/OFL
   font-family: 'Pretendard';
   font-weight: 900;
   font-display: swap;
-  src: local('Pretendard Black'), url(./woff2/Pretendard-Black.woff2) format('woff2'), url(./woff/Pretendard-Black.woff) format('woff');
+  src: local('Pretendard Black'), url(./font/woff2/Pretendard-Black.woff2) format('woff2'), url(./font/woff/Pretendard-Black.woff) format('woff');
 }
 
 @font-face {
   font-family: 'Pretendard';
   font-weight: 800;
   font-display: swap;
-  src: local('Pretendard ExtraBold'), url(./woff2/Pretendard-ExtraBold.woff2) format('woff2'), url(./woff/Pretendard-ExtraBold.woff) format('woff');
+  src: local('Pretendard ExtraBold'), url(./font/woff2/Pretendard-ExtraBold.woff2) format('woff2'), url(./font/woff/Pretendard-ExtraBold.woff) format('woff');
 }
 
 @font-face {
   font-family: 'Pretendard';
   font-weight: 700;
   font-display: swap;
-  src: local('Pretendard Bold'), url(./woff2/Pretendard-Bold.woff2) format('woff2'), url(./woff/Pretendard-Bold.woff) format('woff');
+  src: local('Pretendard Bold'), url(./font/woff2/Pretendard-Bold.woff2) format('woff2'), url(./font/woff/Pretendard-Bold.woff) format('woff');
 }
 
 @font-face {
   font-family: 'Pretendard';
   font-weight: 600;
   font-display: swap;
-  src: local('Pretendard SemiBold'), url(./woff2/Pretendard-SemiBold.woff2) format('woff2'), url(./woff/Pretendard-SemiBold.woff) format('woff');
+  src: local('Pretendard SemiBold'), url(./font/woff2/Pretendard-SemiBold.woff2) format('woff2'), url(./font/woff/Pretendard-SemiBold.woff) format('woff');
 }
 
 @font-face {
   font-family: 'Pretendard';
   font-weight: 500;
   font-display: swap;
-  src: local('Pretendard Medium'), url(./woff2/Pretendard-Medium.woff2) format('woff2'), url(./woff/Pretendard-Medium.woff) format('woff');
+  src: local('Pretendard Medium'), url(./font/woff2/Pretendard-Medium.woff2) format('woff2'), url(./font/woff/Pretendard-Medium.woff) format('woff');
 }
 
 @font-face {
   font-family: 'Pretendard';
   font-weight: 400;
   font-display: swap;
-  src: local('Pretendard Regular'), url(./woff2/Pretendard-Regular.woff2) format('woff2'), url(./woff/Pretendard-Regular.woff) format('woff');
+  src: local('Pretendard Regular'), url(./font/woff2/Pretendard-Regular.woff2) format('woff2'), url(./font/woff/Pretendard-Regular.woff) format('woff');
 }
 
 @font-face {
   font-family: 'Pretendard';
   font-weight: 300;
   font-display: swap;
-  src: local('Pretendard Light'), url(./woff2/Pretendard-Light.woff2) format('woff2'), url(./woff/Pretendard-Light.woff) format('woff');
+  src: local('Pretendard Light'), url(../font/woff2/Pretendard-Light.woff2) format('woff2'), url(../font/woff/Pretendard-Light.woff) format('woff');
 }
 
 @font-face {
   font-family: 'Pretendard';
   font-weight: 200;
   font-display: swap;
-  src: local('Pretendard ExtraLight'), url(./woff2/Pretendard-ExtraLight.woff2) format('woff2'), url(./woff/Pretendard-ExtraLight.woff) format('woff');
+  src: local('Pretendard ExtraLight'), url(../font/woff2/Pretendard-ExtraLight.woff2) format('woff2'), url(../font/woff/Pretendard-ExtraLight.woff) format('woff');
 }
 
 @font-face {
   font-family: 'Pretendard';
   font-weight: 100;
   font-display: swap;
-  src: local('Pretendard Thin'), url(./woff2/Pretendard-Thin.woff2) format('woff2'), url(./woff/Pretendard-Thin.woff) format('woff');
+  src: local('Pretendard Thin'), url(../font/woff2/Pretendard-Thin.woff2) format('woff2'), url(../font/woff/Pretendard-Thin.woff) format('woff');
 }
 
 @font-face {
@@ -134,7 +134,7 @@ http://scripts.sil.org/OFL
 
 @font-face {
   font-family: "NanumSquareB";
-  src: url("../font/NanumSquareR.ttf") format("truetype");
+  src: url("../font/NanumSquareB.ttf") format("truetype");
   font-weight: bold;
   font-style: normal;
 }
@@ -671,6 +671,13 @@ p {
   margin-top: 50%;
 }
 
+.section-title-join {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  margin-top: 10px;
+}
+
 .section-title2 {
   font-size: 24px;
   font-weight: bold;
@@ -725,33 +732,19 @@ span input {
   box-sizing: border-box;
 }
 
-/* .join-email {
-  
-  display: block;
-  margin-bottom: 15px;
-} */
-
-/* .join-pw {
+ .join-pw-confirm {
   width: 100%;
   padding: 10px;
   font-size: 14px;
   border: 2px solid #ccc;
   border-radius: 10px;
   box-sizing: border-box;
-} */
-
-/* .join-pw-confirm {
-  width: 100%;
-  padding: 10px;
-  font-size: 14px;
-  border: 2px solid #ccc;
-  border-radius: 10px;
-  box-sizing: border-box;
-} */
+}
 
 .input-wrapper {
   position: relative;
   width: 100%;
+  padding: 5px;
   /* 부모 요소의 너비를 100%로 설정 */
 }
 
@@ -771,7 +764,7 @@ span input {
   transform: translateY(-50%);
   padding: 5px 10px;
   font-size: 12px;
-  background-color: #4caf50;
+  background-color: var(--color-secondary-dark);
   color: white;
   border: none;
   border-radius: 5px;
@@ -779,8 +772,10 @@ span input {
 }
 
 .check-button:hover {
-  background-color: #45a049;
+  background-color: var(--color-secondary);
 }
+
+
 
 .join-gender select {
   width: 100%;
@@ -789,6 +784,7 @@ span input {
   border: 2px solid #ccc;
   border-radius: 5px;
   box-sizing: border-box;
+  color: #757575;
 }
 
 .divider {
@@ -930,6 +926,10 @@ span input {
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.05);
   overflow: hidden;
   width: calc(33.33% - 6px);
+}
+
+.no-keyword {
+  margin: 5px;
 }
 
 .wish-button {
@@ -1553,3 +1553,71 @@ span input {
   }
 }
 
+/* 문의 페이지 */
+
+.inquiry-title {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.inquiry-button {
+  width: 100%;
+  height: 30px;
+  text-align: right;
+  border: 1px solid gray;
+}
+
+.inquiry-button a {
+  width: 60px;
+  height: 20px;
+  display: inline-block;
+  border-radius: 10px;
+  background-color: var(--color-secondary-dark);
+  color:  #ffffff;
+  font-family: Arial, sans-serif;
+  font-size: 11px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  line-height: 20px;
+}
+
+.inquiry-table {
+  width: 100%;
+  border-collapse: collapse;
+  border: solid 1px gray;
+}
+
+.inquiry-table th, .inquiry-table td {
+  padding: 5px;
+  text-align: center;
+  border: solid 1px gray;
+  font-size: 11px;
+}
+
+.inquiry-update-button {
+  width: 100%;
+  height: 20px;
+  font-size: 10px;
+  text-align: center;
+  border: 1px solid gray;
+  background-color: var(--color-secondary-dark);
+  color: #ffffff;
+  margin-bottom: 3px;
+}
+
+.inquiry-write-table {
+  width: 100%;
+  border-collapse: collapse;
+  border: solid 1px gray;
+}
+
+.inquiry-write-table tr, .inquiry-write-table td {
+  padding: 5px;
+  text-align: center;
+  border: solid 1px gray;
+  font-size: 11px;
+}
