--- a/src/main/resources/templates/fragments/productList.html
+++ b/src/main/resources/templates/fragments/productList.html
@@ -2,6 +2,10 @@
   <th:block th:fragment="productList">
     <div class="product-list">
       <!-- 상품 카드 반복 -->
+       <!-- prodCateList가 없을 때 안내 문구 출력 -->
+        <th:block th:if="${prodCateList == null or prodCateList.isEmpty()}">
+        <p class="no-keyword">상품을 찾을 수 없습니다.</p>
+        </th:block>
       <th:block th:each="product : ${prodCateList}">
         <div
           class="product-card"
